--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "plasmo test"
   },
   "dependencies": {
+    "@plasmohq/storage": "^1.7.2",
     "plasmo": "0.82.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
