--- a/package.json
+++ b/package.json
@@ -34,6 +34,16 @@
     "permissions": [
       "tabs",
       "scripting"
+    ],
+    "web_accessible_resources": [
+      {
+        "resources": [
+          "assets/*.png"
+        ],
+        "matches": [
+          "https://*/*"
+        ]
+      }
     ]
   }
 }
